# scratchpad

./: .build.yml  .editorconfig  Cargo.toml  biome.json  build.rs  config.yaml  deno.json  main.rs  mini-zod.ts  node-corepack.yml  packages.x86_64  pacman.conf  profiledef.sh  rustfmt.toml  script.py  shits.ts
.github/workflows/: build.yaml  rust.yaml  try.yaml
airootfs/etc/: hostname  motd  pacman.conf
airootfs/etc/initcpio/hooks/: archiso_ventoy
airootfs/etc/initcpio/install/: archiso_ventoy
airootfs/etc/kernel/: cmdline
airootfs/etc/mkinitcpio.conf.d/: xnukiso.conf
airootfs/etc/mkinitcpio.d/: linux.preset
airootfs/etc/pacman.d/: seoul-mirrorlist
airootfs/etc/ssh/: sshd_config
airootfs/etc/systemd/resolved.conf.d/: archiso.conf
airootfs/root/: .Xresources  .xinitrc  tips.md
airootfs/root/.config/fish/: config.fish
airootfs/root/.config/fish/functions/: fish_greeting.fish
airootfs/root/.config/fontconfig/: fonts.conf
airootfs/root/.config/netsurf/: Choices
efiboot/loader/entries/: 01-archiso-x86_64-linux.conf
generate/: Cargo.toml  generate.rs
layouts/: xnuk.yaml
libmsi/: Cargo.toml
libmsi/src/: bindings.rs  lib.rs  main.rs  wrapper.rs
src/: lib.rs  main.rs  mime.rs  scan.rs  service.rs  watch.rs  wrapper.h  wrapper.rs
그래서 from .my import underwear (상대 그 뭐냐 뭐시기) 하려면 어떻게 해야 해요?/: my.py  run.py
