[package]
name = "sse-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
notify = "5.1.0"
anyhow = "1.0.70"
pin-project = "1.0.12"

[dependencies.tokio]
version = "1.27.0"
features = ["full"]

[dependencies.hyper]
version = "1.0.0-rc.3"
features = ["http1", "http2", "server"]

[dependencies.chrono]
version = "0.4.24"
default-features = false
features = ["clock"]

[[bin]]
name = "sse-watch"
path = "main.rs"
