[package]
name = "sse-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.1.0"
anyhow = "1.0.70"
axum = "0.6.15"
pin-project-lite = "0.2.9"
futures-core = "0.3.28"
mediatype = "0.19.13"

[dependencies.tokio]
version = "1.27.0"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.12"
features = ["sync"]

[dependencies.chrono]
version = "0.4.24"
default-features = false
features = ["clock"]

[[bin]]
name = "sse-watch"
path = "main.rs"
